--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="assets/img/logo/Hotel Branding.png" type="image/x-icon">
     
     <!--style css-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_halaman_awal.css">
 
     <!--search-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -1866,7 +1866,7 @@
 </section>
 
 <div id="buttonContainer" class="floating-button">
-    <button id="pesanLink" onclick="redirectToPage()">Pesan Sekarang</button>
+    <a id="pesanLink" href="index_Pesan.html" class="button-link">Pesan Sekarang</a>
 </div>
 
 
